--- a/login_test/android/app/src/main/AndroidManifest.xml
+++ b/login_test/android/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
+                <data android:scheme="kakao59bf8c9559eaccb087ee963a8cf5061a" android:host="oauth"/>
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
